--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -20,6 +20,7 @@
 }
 .ant-card-body{
     align-content: center !important;
+    padding-top: 0;
 }
 .ant-form ant-form-horizontal{
     margin: 0 auto;
